--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  12 Jan 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask git-1.6.1 till bug #254029 is solved
+
   12 Jan 2009; Fabian Groffen <grobian@gentoo.org>
   sunos/solaris/5.11/x64/package.mask:
   mask dev-libs/zziplib-0.13.50 on Solaris 11/x64
