--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  15 Jan 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
+  Also mask sandbox-1.2.20_alpha2-r1, bug 255019
+
   13 Jan 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
   p.mask >=sandbox-1.3.0, bug 254358
 
