--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,35 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2260 2009/01/13 21:31:47 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2268 2009/01/16 00:56:48 ikelos Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  16 Jan 2009; Mike Auty <ikelos@gentoo.org> package.mask:
+  Mask out further vulnerable vmware software versions.
+
+  15 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> package.mask:
+  Masked dev-python/f2py for removal in 30 days
+
+  15 Jan 2009; Torsten Veller <tove@gentoo.org> package.mask:
+  Unmask dev-perl/Net-Amazon-S3-0.49
+
+  15 Jan 2009; Alexis Ballier <aballier@gentoo.org> package.mask:
+  unmask vamp sdk 2.0 now that audacity is fixed
+
+  14 Jan 2009; Alexey Shvetsov <alexxy@gentoo.org> package.mask:
+  Unmask kde 4.1.4
+
+  14 Jan 2009; Rémi Cardona <remi@gentoo.org> package.mask:
+  unleash xorg-server-1.5.3-r1
+
+  14 Jan 2009; Rémi Cardona <remi@gentoo.org> package.mask:
+  virtual/xft is gone from portage, updating p.mask
+
+  14 Jan 2009; Zac Medico <zmedico@gentoo.org> package.mask:
+  Remove mask for sys-apps/portage-2.1.6.5 since it's no longer
+  in the tree.
 
   13 Jan 2009; Rémi Cardona <remi@gentoo.org> package.mask:
   add x11-base/xorg-server-1.5.3-r1 to p.mask
