--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.12527 (17 Jan 2009)
+
+  17 Jan 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.12347.ebuild, +portage-2.2.00.12527.ebuild:
+  Bump, matches 2.2_rc22+
+
 *portage-2.2.00.12425 (11 Jan 2009)
 
   11 Jan 2009; Fabian Groffen <grobian@gentoo.org>
