--- a/sys-devel/gcc-apple/ChangeLog
+++ b/sys-devel/gcc-apple/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/gcc-apple
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+  18 Jan 2009; Fabian Groffen <grobian@gentoo.org>
+  -gcc-apple-4.0.1_p5363-r1.ebuild, -gcc-apple-4.0.1_p5465-r1.ebuild,
+  -gcc-apple-4.0.1_p5484.ebuild, -gcc-apple-4.0.1_p5488.ebuild,
+  -gcc-apple-4.2.1_p5564.ebuild:
+  Remove old
 
   30 Dec 2008; Fabian Groffen <grobian@gentoo.org>
   gcc-apple-4.2.1_p5564.ebuild, gcc-apple-4.2.1_p5566.ebuild:
