--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  18 Jan 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask net-misc/ntp as it obviously needs root privileges
+
   16 Jan 2009; Fabian Groffen <grobian@gentoo.org>
   sunos/solaris/package.mask:
   mask media-video/mplayer-1.0_rc2_p28288 on Solaris because it doesn't
