--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  25 Jan 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask dev-python/pygobject-2.16.0 for some strange libtool weirdness
+
   22 Jan 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask sys-apps/groff-1.20.1-r1 cause it generates too many bugs
 
