I might be premature on removing the old-style bsd and irix profiles but they have a really small user base, if any for the *bsd ones

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,39 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  30 Jan 2009; Jeremy Olexa <darkside@gentoo.org> -bsd, -bsd/freebsd,
+  -bsd/freebsd/6.2, -bsd/freebsd/6.2/package.mask,
+  -bsd/freebsd/6.2/package.provided, -bsd/freebsd/6.2/parent,
+  -bsd/freebsd/6.2/x86, -bsd/freebsd/6.2/x86/deprecated,
+  -bsd/freebsd/6.2/x86/make.defaults, -bsd/freebsd/6.2/x86/parent,
+  -bsd/freebsd/6.3, -bsd/freebsd/6.3/package.mask,
+  -bsd/freebsd/6.3/package.provided, -bsd/freebsd/6.3/parent,
+  -bsd/freebsd/6.3/x86, -bsd/freebsd/6.3/x86/deprecated,
+  -bsd/freebsd/6.3/x86/make.defaults, -bsd/freebsd/6.3/x86/parent,
+  -bsd/freebsd/make.defaults, -bsd/freebsd/parent, -bsd/freebsd/use.force,
+  -bsd/freebsd/use.mask, -bsd/freebsd/virtuals, -bsd/netbsd,
+  -bsd/netbsd/4.0, -bsd/netbsd/4.0/package.provided, -bsd/netbsd/4.0/parent,
+  -bsd/netbsd/4.0/x86, -bsd/netbsd/4.0/x86/deprecated,
+  -bsd/netbsd/4.0/x86/make.defaults, -bsd/netbsd/4.0/x86/parent,
+  -bsd/netbsd/make.defaults, -bsd/netbsd/parent, -bsd/netbsd/use.force,
+  -bsd/netbsd/use.mask, -bsd/netbsd/virtuals, -bsd/openbsd,
+  -bsd/openbsd/4.2, -bsd/openbsd/4.2/package.mask,
+  -bsd/openbsd/4.2/package.provided, -bsd/openbsd/4.2/parent,
+  -bsd/openbsd/4.2/ppc, -bsd/openbsd/4.2/ppc/deprecated,
+  -bsd/openbsd/4.2/ppc/make.defaults, -bsd/openbsd/4.2/ppc/parent,
+  -bsd/openbsd/4.2/x64, -bsd/openbsd/4.2/x64/deprecated,
+  -bsd/openbsd/4.2/x64/make.defaults, -bsd/openbsd/4.2/x64/parent,
+  -bsd/openbsd/4.2/x86, -bsd/openbsd/4.2/x86/deprecated,
+  -bsd/openbsd/4.2/x86/make.defaults, -bsd/openbsd/4.2/x86/parent,
+  -bsd/openbsd/make.defaults, -bsd/openbsd/parent, -bsd/openbsd/use.force,
+  -bsd/openbsd/use.mask, -bsd/openbsd/virtuals, -bsd/package.mask,
+  -bsd/packages, -bsd/parent, -bsd/use.mask, -irix, -irix/6.5,
+  -irix/6.5/mips, -irix/6.5/mips/deprecated, -irix/6.5/mips/make.defaults,
+  -irix/6.5/mips/parent, -irix/6.5/package.provided, -irix/6.5/parent,
+  -irix/make.defaults, -irix/package.use.mask, -irix/packages, -irix/parent,
+  -irix/profile.bashrc, -irix/use.force, -irix/use.mask, -irix/virtuals:
+  nuke old-style bsd and irix profiles
+
   30 Jan 2009; Jeremy Olexa <darkside@gentoo.org> -mint, -mint/m68k,
   -mint/m68k/deprecated, -mint/m68k/make.defaults, -mint/m68k/parent,
   -mint/m68k/use.mask, -mint/make.defaults, -mint/package.provided,
