--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  31 Jan 2009; Fabian Groffen <grobian@gentoo.org> +bsd/freebsd/7.1,
+  bsd/freebsd/7.1/package.mask, bsd/freebsd/7.1/package.provided,
+  +bsd/freebsd/7.1/x64, bsd/freebsd/7.1/x64/make.defaults,
+  bsd/freebsd/7.1/x86/make.defaults:
+  Add FreeBSD 7.1 x86 and x64 profiles
+
   25 Jan 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask dev-python/pygobject-2.16.0 for some strange libtool weirdness
 
