--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  31 Jan 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask media-video/ffmpeg-0.4.9_p20090121 because it doesn't compile at all on
+  Darwin and Solaris
+
   31 Jan 2009; Fabian Groffen <grobian@gentoo.org> +bsd/freebsd/7.1,
   bsd/freebsd/7.1/package.mask, bsd/freebsd/7.1/package.provided,
   +bsd/freebsd/7.1/x64, bsd/freebsd/7.1/x64/make.defaults,
