--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  03 Feb 2009; Markus Duft <mduft@gentoo.org>
+  -files/portage-2.2.00.12387-cross-prefix.patch,
+  +files/portage-2.2.00.12574-cross-prefix.patch,
+  portage-2.2.00.12565.ebuild:
+  updated cross-prefix patchery
+
 *portage-2.2.00.12565 (31 Jan 2009)
 
   31 Jan 2009; Fabian Groffen <grobian@gentoo.org>
