--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  13 Feb 2009; Jeremy Olexa <darkside@gentoo.org> ChangeLog:
+  unmask USE={sse2,ssse3} on macos 10.5 x86
+
   04 Feb 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
   net-analyzer/pchar requires root access
 
