--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  16 Feb 2009; Fabian Groffen <grobian@gentoo.org>
+  sunos/solaris/package.mask:
+  Mask sys-devel/binutils-2.19.51.0.2 on Solaris as well
+
   13 Feb 2009; Jeremy Olexa <darkside@gentoo.org> package.use.mask:
   mask USE=ssl on dev-lang/pike globally, bug 256699
 
