--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.12652 (19 Feb 2009)
+
+  19 Feb 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.12608.ebuild, +portage-2.2.00.12652.ebuild:
+  New snapshot
+
 *portage-2.2.00.12608 (18 Feb 2009)
 
   18 Feb 2009; Fabian Groffen <grobian@gentoo.org>
