--- a/app-crypt/steghide/ChangeLog
+++ b/app-crypt/steghide/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/steghide
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/steghide/ChangeLog,v 1.15 2008/05/13 20:42:48 drac Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/steghide/ChangeLog,v 1.16 2009/02/17 16:57:17 drizzt Exp $
+
+  17 Feb 2009; Timothy Redaelli <drizzt@gentoo.org> metadata.xml:
+  Add myself as maintainer
 
   13 May 2008; Samuli Suominen <drac@gentoo.org>
   +files/steghide-0.5.1-gcc43.patch, -files/fix-libtool-invocation.patch,
