--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,26 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2373 2009/02/22 02:14:00 lu_zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2378 2009/02/24 23:42:19 yngwin Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  24 Feb 2009; Ben de Groot <yngwin@gentoo.org> package.mask:
+  Mask x11-themes/qtcurve-qt4-0.61.2 for compilation failure
+
+  23 Feb 2009; Tomas Chvatal <scarabeus@gentoo.org> package.mask:
+  Remove krusader from mask (their release cycle is pretty slow and the app
+  is stable).
+
+  22 Feb 2009; Mike Auty <ikelos@gentoo.org> package.mask:
+  Remove masks for cleaned out insecure vmware products.
+
+  22 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org> package.mask:
+  Remove gucharmap-2.24 mask since bug #243160 is solved.
+
+  22 Feb 2009; Petteri Räty <betelgeuse@gentoo.org> package.mask:
+  Remove mask for kdbus as it was removed from tree.
 
   21 Feb 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
   remove mask entries for non-existant packages after they were removed
